@startuml
title Database Component

class ApiSettings {
    Uuid ID
    Uuid token
    Uuid refresh_token
}

class CalendarSettings {

}

class ProcoreSettings {
    
}

class Collaborator {

}

class EmailSettings {
    bool event_change
    bool added_collaborator

}

class User {
    Uuid ID
    string email
    string display_name
    EmailSettings email_settings
    CalendarSettings calendar_settings
}

class AccountManager {
    ProcoreSettings procore_settings
    Collaborator[] collaborators
}

class DataMapper {
    void DeleteUser(User user)
    void UpdateUser(User user)
    User CreateUser(User user)
    User GetUser(Uuid id)
}

AccountManager --|> User
AccountManager --> Collaborator
Collaborator --|> User
CalendarSettings --|> ApiSettings
ProcoreSettings --|> ApiSettings
User --> CalendarSettings
User --> ProcoreSettings
User --> EmailSettings

@enduml